chore: fix overlapping stuff

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -418,6 +418,7 @@ p {
   height: 75vh;
   min-height: 540px;
   background: #ffffff;
+  overflow: hidden;
 }
 
 .downloadGradient {
